crates/icydb-core/tests/ui/query_plan_module_private.rs
use icydb_core::db::query::plan::PlanError;

fn main() {}
